Revert "INFT-3339 - Fix carousel styles on mobile devices"
This reverts commit 3ea92d10

--- a/sass/_scss/infopaginas.scss
+++ b/sass/_scss/infopaginas.scss
@@ -2038,9 +2038,6 @@ $thumb-width-mb: 60px;
 
       @media only screen and (max-width: 805px) {
         height: $homepage-carousel-height-mobile;
-        img {
-          top: 27%;
-        }
       }
 
       .slide-title {
@@ -2251,7 +2248,7 @@ $thumb-width-mb: 60px;
 
 @media only screen and (max-width: 804px) {
   .button--hide-map {
-    right: 10px;
+    right: 50px;
   }
 
   .button--show-map {
@@ -2260,10 +2257,8 @@ $thumb-width-mb: 60px;
   }
 }
 
-.button-round.button--hide-map {
-  top: 15px;
-  right: 15px;
-  bottom: unset;
+.button--hide-map {
+  bottom: -100px;
 
   @media only screen and (min-width: 805px) {
     bottom: auto !important;
